force-app/main/default/objects/Device_Utilization__c/Device_Utilization__c.object-meta.xml
<CustomObject>
    <label>Device Utilization Snapshot</label>
    <nameField>
        <label>Device Utilization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Utilizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>