force-app/main/default/objects/Device_Utilization__c/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <label>קוד מכשיר</label>
    <length>25</length>
    <type>Text</type>
</CustomField>