force-app/main/default/objects/Device_Utilization__c/fields/In_stock__c.field-meta.xml
<CustomField>
    <fullName>In_stock__c</fullName>
    <label>במלאי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>