force-app/main/default/objects/Device_Utilization__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>דגם</label>
    <length>25</length>
    <type>Text</type>
</CustomField>